Refactor padding classes for sections

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <main>
       <!-- About -->
-      <section id="about" class="py-16">
+      <section id="about" class="pt-16 pb-8">
         <div class="container-secondary">
           <!-- Title -->
           <h2 class="inline-block mb-5 mx-3.5 lg:mx-0">Biz haqimizda</h2>
@@ -488,7 +488,7 @@
       </section>
 
       <!-- Features -->
-      <section class="pb-16">
+      <section class="py-8">
         <div class="container-secondary">
           <!-- Title -->
           <h2 class="inline-block mb-5 mx-3.5 lg:mx-0">
@@ -496,7 +496,7 @@
           </h2>
 
           <!-- Main content -->
-          <ol class="grid grid-cols-1 gap-5 mb-5 sm:grid-cols-2 lg:grid-cols-3">
+          <ol class="grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
             <!-- 1 -->
             <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
               <b
@@ -615,7 +615,7 @@
       </section>
 
       <!-- Order for call -->
-      <section class="pb-16">
+      <section class="py-8">
         <div class="container-secondary">
           <div
             class="relative overflow-hidden bg-brand-dark text-white rounded-3xl p-3.5 sm:py-12 lg:px-12 lg:py-16"
@@ -679,7 +679,7 @@
       </section>
 
       <!-- Courses -->
-      <section id="courses" class="pb-16">
+      <section id="courses" class="py-8">
         <div class="container-secondary">
           <div class="flex items-center justify-between mb-5 mx-3.5 lg:mx-auto">
             <!-- Title -->
@@ -713,7 +713,7 @@
       </section>
 
       <!-- Gallery -->
-      <section id="gallery" class="pb-16">
+      <section id="gallery" class="py-8">
         <div class="container-secondary">
           <div class="flex items-center justify-between mb-5 mx-3.5 lg:mx-auto">
             <!-- Title -->
@@ -800,7 +800,7 @@
       </section>
 
       <!-- FAQ -->
-      <section id="faq" class="pb-16">
+      <section id="faq" class="pt-8 pb-16">
         <div class="container-secondary !max-w-5xl">
           <!-- Title -->
           <h2 class="mb-5 mx-3.5 lg:mx-auto lg:text-center">
