Refactor YouTube iframe styling for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -946,15 +946,15 @@
       class="hidden opacity-0 fixed inset-0 z-20 size-full bg-white/50 backdrop-blur-sm transition-opacity duration-300"
     >
       <div class="flex items-center justify-center size-full">
-        <div class="relative">
+        <div class="relative max-w-3xl w-full h-60 mx-1.5 xs:h-72 sm:h-96">
           <!-- Youtube video -->
           <iframe
             width="896"
             height="384"
             allowfullscreen
             title="Maktab haqida"
+            class="size-full bg-white rounded-3xl"
             referrerpolicy="strict-origin-when-cross-origin"
-            class="max-w-3xl h-60 mx-1.5 bg-white rounded-3xl xs:h-72 sm:h-96"
             src="https://www.youtube.com/embed/P6FORpg0KVo?si=iPXJ7kJPYgjTuiEz"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           ></iframe>
