Add YouTube iframe API integration and pause functionality on modal close

--- a/index.html
+++ b/index.html
@@ -949,13 +949,14 @@
         <div class="relative max-w-3xl w-full h-60 mx-1.5 xs:h-72 sm:h-96">
           <!-- Youtube video -->
           <iframe
+            id="iframe"
             width="896"
             height="384"
             allowfullscreen
             title="Maktab haqida"
             class="size-full bg-white rounded-3xl"
             referrerpolicy="strict-origin-when-cross-origin"
-            src="https://www.youtube.com/embed/P6FORpg0KVo?si=iPXJ7kJPYgjTuiEz"
+            src="https://www.youtube.com/embed/P6FORpg0KVo?enablejsapi=1"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           ></iframe>
 
